--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,3 @@
-# entries added by gitignore on Sat May  3 21:57:40 2014
-
-## .gitignore entries for c
-
-
-# Object files
 *.o
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-
-## .gitignore entries for objective-c
-
-
-# Xcode
-.DS_Store
-*/build/*
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-profile
-*.moved-aside
-DerivedData
-.idea/
-*.hmap
-
+*.swp
+vm_stoop
